# Omniverse-Connect-cmake

./: CMakeLists.txt  README.md
CMake/Modules/: FindNVidiaUSD.cmake  FindOmniverseClient.cmake  FindOmniverseConnectSample.cmake
SimpleApp/: CMakeLists.txt  Main.cpp
